<resources>
    <string name="app_name">BGTU statistic</string>
    <string name="performance_bottom_bar">Academic performance</string>
    <string name="movement_bottom_bar">Contingent movement</string>
    <string name="performance_fragment_title">Performance</string>
    <string name="movement_fragment_title">Contingent</string>
    <string name="choose_period">Choose period</string>
    <string-array name="year_spinner_content">
        <item>2021</item>
    </string-array>
    <string-array name="semester_spinner_content">
        <item>@string/spinner_all</item>
        <item>@string/spinner_1_sem</item>
        <item>@string/spinner_2_sem</item>
    </string-array>
    <string-array name="count_debts">
        <item>@string/count_debts_1</item>
        <item>@string/count_debts_2</item>
        <item>@string/count_debts_3</item>
        <item>@string/count_debts_4</item>
        <item>@string/count_debts_5</item>
    </string-array>
    <string name="count_debts_1">1 session</string>
    <string name="count_debts_2">2 sessions</string>
    <string name="count_debts_3">3 sessions</string>
    <string name="count_debts_4">4 sessions</string>
    <string name="count_debts_5">More than 5 sessions</string>
    <string name="spinner_all">All</string>
    <string name="spinner_1_sem">1st Semester</string>
    <string name="spinner_2_sem">2nd Semester</string>
    <string name="year_label">Year</string>
    <string name="semester_label">Semester</string>
    <string name="exit_button_text">Logout</string>
    <string name="contingent_year">2021 year</string>
    <string name="deducted">Deducted</string>
    <string name="enrolled">Enrolled</string>
    <string name="more_details">More details</string>
    <string name="arrears">Arrears</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="no_internet">No internet connection</string>
    <string name="wrong_credentials">Invalid username or password</string>
    <string name="server_side_problem">Server side error</string>
    <string name="empty_fields">One or two fields contains errors</string>
    <string name="shared_preference_key_file" translatable="false">com.example.android.bgtustatistic</string>
    <string name="barchart_color_gradient_end" translatable="false">#FFC5EC</string>
    <string name="barchart_color_gradien_start" translatable="false">#FF79AF</string>
    <string name="pie_chart_center_text">Total</string>
    <string name="settings_title">Settings</string>
</resources>