<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".UILayer.UIelements.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/logo_card"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="112dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher_logo"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/username"
        android:textColorHint="@android:color/tab_indicator_text"
        app:hintTextColor="@color/button_light_blue"
        app:boxStrokeColor="@color/button_light_blue"
        app:layout_constraintTop_toBottomOf="@id/logo_card"
        app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
        style="@style/OutlinedRoundedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="20"
            android:textCursorDrawable="@drawable/light_blue_cursor"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/password"
        android:textColorHint="@android:color/tab_indicator_text"
        app:hintTextColor="@color/button_light_blue"
        style="@style/OutlinedRoundedBox"
        app:boxStrokeColor="@color/button_light_blue"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/username_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="20"
            android:textCursorDrawable="@drawable/light_blue_cursor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/button_light_blue"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/password_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>