<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UILayer.UIelements.SettingsBottomSheet"
    android:background="@drawable/rounded_corners_shape">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/arrow"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:background="@color/bottom_sheet_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/text_semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_period"
        android:textSize="14sp"
        android:layout_marginStart="@dimen/start_margin"
        app:layout_constraintTop_toBottomOf="@id/placeholder"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/year_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginEnd="@dimen/end_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_semester">
        <TextView
            android:id="@+id/year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_label"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/year_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/year_spinner_content"
            android:textAlignment="viewEnd"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/semester_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/end_margin"
        android:layout_marginStart="@dimen/start_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_group">

        <TextView
            android:id="@+id/semester_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semester_label"
            android:textColor="@color/black"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/semester_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/semester_spinner_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>